--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,107 @@
 version: "3.9"
 
 services:
-  app:
+  # API Gateway
+  api-gateway:
     build: .
-    container_name: php_app
+    container_name: virtualib_api_gateway
     ports:
-      - "8080:80"   
+      - "8080:80"
     env_file:
       - .env
     volumes:
       - .:/var/www/html
+    depends_on:
+      - auth-service
+      - books-service
+      - notifications-service
+      - dashboard-service
+
+  # Auth Service
+  auth-service:
+    build: .
+    container_name: virtualib_auth_service
+    ports:
+      - "8081:80"
+    env_file:
+      - .env
+    volumes:
+      - .:/var/www/html
+    environment:
+      - SERVICE_NAME=auth
+      - SERVICE_PORT=8081
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+
+  # Books Service
+  books-service:
+    build: .
+    container_name: virtualib_books_service
+    ports:
+      - "8082:80"
+    env_file:
+      - .env
+    volumes:
+      - .:/var/www/html
+    environment:
+      - SERVICE_NAME=books
+      - SERVICE_PORT=8082
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+
+  # Notifications Service
+  notifications-service:
+    build: .
+    container_name: virtualib_notifications_service
+    ports:
+      - "8083:80"
+    env_file:
+      - .env
+    volumes:
+      - .:/var/www/html
+    environment:
+      - SERVICE_NAME=notifications
+      - SERVICE_PORT=8083
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+
+  # Dashboard Service
+  dashboard-service:
+    build: .
+    container_name: virtualib_dashboard_service
+    ports:
+      - "8084:80"
+    env_file:
+      - .env
+    volumes:
+      - .:/var/www/html
+    environment:
+      - SERVICE_NAME=dashboard
+      - SERVICE_PORT=8084
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+
+
+  # Nginx Load Balancer (opcional)
+  nginx:
+    image: nginx:alpine
+    container_name: virtualib_nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - api-gateway
+
