feature: upload de imagens funcionando com cloudflare r2

--- a/.dockerignore
+++ b/.dockerignore
@@ -49,3 +49,17 @@ build/
 
 # Cache
 .cache/
+
+# Composer
+vendor/
+composer.phar
+
+# Test files
+test-*.php
+*test*.php
+phpunit.xml
+tests/
+
+# Scripts de desenvolvimento
+setup-*.php
+check-*.php
