--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,7 @@ events {
 }
 
 http {
+    
     upstream api_gateway {
         server api-gateway:80;
     }
@@ -27,4 +28,6 @@ http {
             add_header Content-Type text/plain;
         }
     }
+
+    client_max_body_size 30M;
 }
