--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,16 +82,30 @@ services:
       - SERVICE_NAME=dashboard
       - SERVICE_PORT=8084
 
-  # Nginx Load Balancer (opcional)
+  # Nginx Load Balancer com HTTPS
   nginx:
     image: nginx:alpine
     container_name: virtualib_nginx
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
     depends_on:
       - api-gateway
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+
+  # Certbot para gerenciar certificados SSL
+  certbot:
+    image: certbot/certbot
+    container_name: virtualib_certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+
   # Redis para sessões PHP compartilhadas
   redis:
     image: redis:6.2-alpine
